--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Guess the Number</h1>
+    <h1>Guess the Number (1 to 100)</h1>
     <input type="number" id="guessInput" placeholder="Guess a number"  />
     <button onclick="handleGuess()">Submit</button>
     <div class="guesses" id="guessList"></div>
