--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@
         guessList.textContent = '';
       } else {
         wrongGuesses.push(guess);
-        guessList.textContent = `Wrong guesses: ${wrongGuesses.join(', ')},\n Guess ${Math.abs(guess-targetNumber) > 10 ? "much  " : "lil "} ${guess - targetNumber > 0 ? "Higher" : "Lower"}`;
+        //guessList.textContent = `Wrong guesses: ${wrongGuesses.join(', ')}, You should guess ${Math.abs(guess-targetNumber) > 10 ? "much  " : "lil "} ${guess - targetNumber > 0 ? "Lower" : "Higher"} number.`;
+        guessList.innerHTML = `<strong>Wrong guesses:</strong> ${wrongGuesses.join(', ')}<br><strong>Hint:</strong> You should guess ${Math.abs(guess - targetNumber) > 10 ? "much" : "lil"} ${guess - targetNumber > 0 ? "Lower" : "Higher"} number.`;
         successMsg.textContent = '';
       }
 
